# storehaus

./: .gitignore  CHANGELOG.md  Cargo.toml  DEBUG_LOGGING.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  ecommerce_operations.wal  init.sql  storehaus.example.toml
assets/: ATTRIBUTION.md
cache_system/: Cargo.toml
cache_system/src/: config.rs  errors.rs  lib.rs  manager.rs  params.rs  prelude.rs
config/: Cargo.toml
config/src/: lib.rs
dispatcher/: Cargo.toml
dispatcher/examples/: demo.rs
dispatcher/src/: config.rs  core.rs  errors.rs  lib.rs  migration.rs
docs/: README.md  caching.md  configuration.md  error-handling.md  models.md  query-builder-joins-aggregations.md  signals.md  system-fields.md  tags.md  transactions.md
examples/: 01_basic_usage.rs  02_model_definition.rs  README.md  all_types_demo.rs  blog_system.rs  caching_basic.rs  demo.rs  ecommerce_demo.rs  join_and_aggregation_demo.rs  signals_basic.rs  tags_demo.rs
signal_system/: Cargo.toml
signal_system/src/: conversion.rs  event.rs  lib.rs  manager.rs  prelude.rs  types.rs
src/: core.rs  errors.rs  lib.rs  migration.rs  prelude.rs
store_object/: Cargo.toml
store_object/examples/: error_handling_test.rs  validation_test.rs
store_object/src/: errors.rs  id_type.rs  lib.rs  prelude.rs  query_builder.rs  tagged_data.rs  validation.rs  validation_test.rs
store_object/src/generic_store/: core.rs  filterable.rs  mod.rs  soft_deletable.rs  store_object.rs  transaction.rs
store_object/src/query_builder/: aggregation.rs  builder.rs  filter.rs  grouping.rs  integration_tests.rs  join.rs  mod.rs  ordering.rs  pagination.rs  sql_generation.rs  tests.rs  update.rs
store_object/src/traits/: core.rs  filterable.rs  mod.rs  soft_deletable.rs  table_metadata.rs
table_derive/: Cargo.toml
table_derive/examples/: error_demo.rs  test.rs  test_soft_delete.rs
table_derive/src/: lib.rs  model_macro.rs  parsing.rs  sql_generation.rs
tests/: json_types_test.rs
type_mapping/: Cargo.toml  README.md
type_mapping/src/: lib.rs  serialize.rs  sql.rs  types.rs  validate.rs
