[package]
name = "cache-system"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-logging = []

[dependencies]
redis = { version = "0.32.6", features = ["tokio-comp", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
async-trait = "0.1"
config = { path = "../config" }
