[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
store-object = { path = "../store_object" }
table-derive = { path = "../table_derive" }
signal_system = { path = "../signal_system" }
cache_system = { path = "../cache_system" }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "demo"
path = "examples/demo.rs"
