[package]
name = "signal-system"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-logging = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
type-mapping = { path = "../type_mapping" }
config = { path = "../config" }