[package]
name = "type-mapping"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug-logging = []

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"